# license-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
examples/: validate.js  validate.py
src/: main.rs  model.rs  serve.rs
