[package]
name = "license-server"
version = "0.3.0"
authors = ["Eli Yukelzon <reflog@gmail.com>"]
edition = "2018"
description = "Small license-server"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
sha2 = "0.9.2"
hmac = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
base64 = "0.13.0"
chrono = "0.4.19"
itertools = "0.10.0"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
pretty_env_logger = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
